Bug #58014
notifications: metadata does not work for COPY events
% Done:
0%
Source:
Community (user)
Tags:
notifications backport_processed
Backport:
quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Description
this is a regression due to: https://github.com/ceph/ceph/pull/39192/commits/35a4eb4410394a0014648dda7df92642f3b536d3
(original fix was: https://tracker.ceph.com/issues/51261)
Related issues
History
#1 Updated by Yuval Lifshitz 3 months ago
- Status changed from New to Fix Under Review
- Pull request ID set to 48875
#2 Updated by Thilo-Alexander Ginkel about 2 months ago
Hi Yuval,
AFAICS the changes have been reviewed and the fixes have made it to main. However, the issues in Redmine are still flagged as "Fix under review".
Could it be that their state should be switched to "Backport pending" so that the backport issues for Quincy are created and can be worked upon?
Thanks,
Thilo
P.S.: The same applies to #58020
#3 Updated by Yuval Lifshitz about 2 months ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Backport Bot about 2 months ago
- Copied to Backport #58285: quincy: notifications: metadata does not work for COPY events added
#5 Updated by Backport Bot about 2 months ago
- Tags changed from notifications to notifications backport_processed