rgw/notifications: sending metadata in COPY and CompleteMultipartUpload

when the metadata filter is not set.
this is a regression from: 35a4eb4410394a0014648dda7df92642f3b536d

Fixes: https://tracker.ceph.com/issues/58014

Signed-off-by: yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit e4e05dde604830f6f2e58b28c4cb2e6d208b0064)

Conflicts:
	src/rgw/rgw_notify.cc
	src/rgw/rgw_notify.h